@@ -1,7 +1,7 @@
 import org.apache.geode.gradle.TestPropertiesWriter
-import org.apache.geode.gradle.RepeatTest
+
 import org.apache.geode.gradle.plugins.DependencyConstraints
-import org.apache.geode.gradle.RunInSubdirectoryTestFramework
+import org.apache.geode.gradle.testing.repeat.RepeatTest
 
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -31,6 +31,7 @@ compileTestJava {
 }
 
 test {
+  useJUnitPlatform {}
   doFirst {
     TestPropertiesWriter.writeTestProperties(buildDir, name)
   }
@@ -40,6 +41,7 @@ test {
     maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
   }
 }
+
 
 apply plugin: 'nebula.facet'
 facets {
@@ -74,7 +76,7 @@ dependencies {
     transitive = false
   }
 
-  testRuntime('cglib:cglib:' + DependencyConstraints.get('cglib.version')) {
+  testRuntimeOnly('cglib:cglib:' + DependencyConstraints.get('cglib.version')) {
     exclude module: 'org.apache.ant'
   }
 }
@@ -90,9 +92,9 @@ configure([integrationTest, distributedTest, performanceTest, acceptanceTest, ui
 }
 
 configure([integrationTest, distributedTest, performanceTest]) {
-  useJUnit {
+  useJUnitPlatform {
     if (project.hasProperty("testCategory")) {
-      includeCategories += project.testCategory
+      includeTags += project.testCategory
     }
   }
 }
@@ -134,25 +136,18 @@ task repeatUnitTest(type: RepeatTest) {
 }
 
 configure([integrationTest, distributedTest, performanceTest, acceptanceTest, uiTest, upgradeTest]) {
+  useJUnitPlatform {}
   if (project.hasProperty('excludeTest')) {
     exclude project.getProperty('excludeTest').split(',')
   }
 }
 
-configure([acceptanceTest, distributedTest, integrationTest, uiTest, upgradeTest, repeatAcceptanceTest, repeatDistributedTest, repeatIntegrationTest, repeatUnitTest, repeatUpgradeTest]) {
-  doFirst {
-    // Wrap the task's test framework in a wrapper that runs each test worker JVM in a unique
-    // subdirectory.
-    def subdirFramework = new RunInSubdirectoryTestFramework(testFramework)
-    // This call works for now, but the Test class declares useTestFramework() as protected, so
-    // this could become troublesome in a future version of Gradle/Groovy.
-    useTestFramework subdirFramework
-  }
-}
-
 configure([repeatDistributedTest, repeatIntegrationTest, repeatUpgradeTest, repeatUnitTest, repeatAcceptanceTest]) {
   times = Integer.parseInt(repeat)
-  useJUnit {}
+  forkEvery 1
+  useJUnitPlatform {
+    excludeTags += "org.apache.geode.test.junit.categories.IgnoreInRepeatTestTasks"
+  }
   outputs.upToDateWhen { false }
 
   if (project.hasProperty("failOnNoMatchingTests")) {
@@ -178,11 +173,18 @@ gradle.taskGraph.whenReady({ graph ->
       }
 
       maxHeapSize '768m'
-      jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-ea']
+      jvmArgs += ['-XX:+HeapDumpOnOutOfMemoryError', '-ea']
       if (project.hasProperty('testJVMVer') && testJVMVer.toInteger() >= 9) {
         jvmArgs += ["--add-opens", "java.xml/jdk.xml.internal=ALL-UNNAMED"]
         jvmArgs += ["--add-opens", "java.base/jdk.internal.module=ALL-UNNAMED"]
         jvmArgs += ["--add-opens", "java.base/java.lang.module=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/jdk.internal.ref=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/jdk.internal.util.jar=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/jdk.internal.platform.cgroupv1=ALL-UNNAMED"]
       }
       if (project.hasProperty('testJVM') && !testJVM.trim().isEmpty()) {
         executable = "${testJVM}/bin/java"
@@ -212,7 +214,7 @@ gradle.taskGraph.whenReady({ graph ->
 
       // The distributed tests seem to need to use /tmp directly,
       // so exclude them from using the supplied temp directory.
-      if (!test.name.contains("distributed")) {
+      if (!test.name.contains("distributed") && !test.name.contains("repeatDistributed")) {
         systemProperty 'java.io.tmpdir', System.getProperty('java.io.tmpdir')
       }
 
@@ -233,12 +235,17 @@ gradle.taskGraph.whenReady({ graph ->
       }
     }
   }
+  repeatAcceptanceTest.exclude acceptanceTest.excludes
+  repeatDistributedTest.exclude distributedTest.excludes
+  repeatIntegrationTest.exclude integrationTest.excludes
+  repeatUnitTest.exclude test.excludes
+  repeatUpgradeTest.exclude upgradeTest.excludes
 })
 
 acceptanceTest {
   // Acceptance tests may reach out and run a gfsh command from the assembled gfsh.
   // If the test JVM version is specified, we must have the correct JAVA_HOME set for gfsh to use.
-  // See also environment configuration for parallel testing in docker.gradle
+  // See also environment configuration for parallel testing in multi-process-test.gradle
   if (project.hasProperty('testJVM') && !testJVM.trim().isEmpty()) {
     environment "JAVA_HOME", "${project.testJVM}"
   }
